--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -533,6 +533,11 @@ body {
   margin-left: 0;
   margin-right: 0; }
 
+.small {
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 21px; }
+
 .nav-wrapper {
   background: #0277bd; }
 
@@ -656,12 +661,17 @@ body {
     background: #29b6f6; }
   .editRecipe button:hover {
     background: #1565C0; }
+  .editRecipe .input-field label {
+    position: absolute;
+    top: -0.3rem; }
   .editRecipe .btn {
     background: #29b6f6; }
   .editRecipe .btn:hover {
     background: #1565C0; }
   .editRecipe .btn.disabled {
     background: #F3F3F3; }
+  .editRecipe .error {
+    color: #ffc302; }
 
 .pixupload {
   padding: 1rem; }
@@ -702,18 +712,21 @@ body {
 .ingredient-kind {
   max-width: 90%; }
 
+.table-ingredients td {
+  padding: 0 7px 0 7px; }
+
 .table-ingredients td:nth-child(1) {
   width: 15%; }
 
 .table-ingredients td:nth-child(2) {
-  width: 20%; }
+  width: 25%; }
 
 .table-ingredients td:nth-child(3) {
-  width: 57%; }
+  width: 55%; }
 
 .table-ingredients td:nth-child(4) {
-  width: 7%;
-  color: #ffd54f; }
+  width: 5%;
+  color: #29b6f6; }
 
 /*------------ Recipe detail - view -------------------*/
 .viewrecipe {
@@ -726,6 +739,15 @@ body {
     .viewrecipe .title-bg h3 {
       font-weight: 100;
       color: #81d4fa; }
+    .viewrecipe .title-bg .input-field label {
+      position: absolute;
+      top: 0.1rem; }
+  .viewrecipe .card {
+    padding: 0; }
+  .viewrecipe .card-title {
+    padding: 15px; }
+  .viewrecipe .card-content {
+    line-height: 34px; }
 
 .swiper-container {
   width: 400px;
@@ -772,7 +794,7 @@ body {
 .thumb {
   background: #ff5722;
   margin-left: 16px !important;
-  padding: 7px;
-  border-radius: 100%;
+  padding: 8px;
+  border-radius: 50%;
   color: white;
   font-size: 1.3rem; }
