--- a/scss/fb-styles.scss
+++ b/scss/fb-styles.scss
@@ -58,7 +58,7 @@ body {
 }
 
 .userlogedin{
-  border-bottom: double 1px $success-color;
+  background: $secondary-color;
 }
 
 // background picture in a ribbon
