load ratings in route, fixed "add" if there is already a rating of this user

--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -81,7 +81,7 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe"></fb-list-recipe-ratings>
+                <fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe" ratings="viewRecipeCtrl.ratings"></fb-list-recipe-ratings>
             </div>
         </div>
     </div>
