--- a/Server/public/css/fb-styles.css
+++ b/Server/public/css/fb-styles.css
@@ -517,10 +517,32 @@
 /*** Colors ***/
 body {
   background: lightcyan;
-  font-family: GillSans, Calibri, Trebuchet, sans-serif;
-  font-size: 16px;
+  font-family: 'Yanone Kaffeesatz', sans-serif;
   line-height: 18px;
   font-weight: 300; }
+  body h2 {
+    color: #44AA44;
+    background: #004444;
+    font-size: 2.1rem;
+    line-height: 2.2rem; }
+  body h3 {
+    color: #29b6f6;
+    font-size: 1.8rem;
+    letter-spacing: 0.1rem;
+    line-height: 1.7rem; }
+  body h4 {
+    color: #0D47A1;
+    font-size: 1.6rem;
+    letter-spacing: 0.2rem;
+    line-height: 16px; }
+  body p {
+    font-size: 1.3rem;
+    line-height: 1.4rem; }
+  body textarea {
+    color: #A33;
+    font-size: 1.5rem;
+    letter-spacing: 0.05rem;
+    line-height: 1.6rem; }
 
 .clear {
   clear: both; }
@@ -549,7 +571,6 @@ body {
   background: #29b6f6; }
 
 .ribbon {
-  background-image: url("../pictures/bg_artfood_1500.jpg");
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
@@ -647,38 +668,43 @@ body {
 
 /*------------ Recipe detail - add & edit ----------------*/
 .editRecipe {
-  background: #FFF;
-  font-size: 1rem; }
+  background: #FFF; }
   .editRecipe .title-bg {
     background: #0277bd;
     color: #FFF;
-    height: 150px;
+    height: 120px;
     width: 100%; }
     .editRecipe .title-bg h3 {
       font-weight: 100;
       color: #81d4fa; }
+    .editRecipe .title-bg .ingredient-label .active {
+      color: #F44; }
   .editRecipe button {
     background: #29b6f6; }
   .editRecipe button:hover {
-    background: #1565C0; }
+    background: #d84315; }
   .editRecipe .input-field label {
     position: absolute;
     top: -0.3rem; }
-  .editRecipe .input-field label .active {
-    -webkit-transform: translateY(-150%);
-        -ms-transform: translateY(-150%);
-            transform: translateY(-150%);
-    display: none; }
+    .editRecipe .input-field label.active {
+      font-size: 1.3rem;
+      -webkit-transform: translateY(-150%) !important;
+          -ms-transform: translateY(-150%) !important;
+              transform: translateY(-150%) !important;
+      -webkit-transform: translateX(40%) !important;
+          -ms-transform: translateX(40%) !important;
+              transform: translateX(40%) !important;
+      color: #29b6f6; }
   .editRecipe .btn {
     background: #29b6f6; }
   .editRecipe .btn:hover {
-    background: #1565C0; }
-  .editRecipe .btn.disabled {
+    background: #d84315; }
+  .editRecipe .btn .disabled {
     background: #F3F3F3; }
+  .editRecipe .cancel {
+    margin-right: 1.4rem; }
   .editRecipe .error {
-    color: #ffc303; }
-  .editRecipe .ingredient-label .active {
-    color: #F44; }
+    color: #07285a; }
 
 .pixupload {
   padding: 1rem; }
@@ -700,13 +726,13 @@ body {
 .img-caption {
   z-index: 50;
   background: rgba(22, 22, 22, 0.3);
-  color: #ffd54f; }
+  color: #0D47A1; }
 
 .recipe-name {
   margin-left: 1rem; }
 
 .form-title {
-  color: #1565C0; }
+  color: #29b6f6; }
 
 .recipe-form {
   padding: 1rem; }
@@ -763,6 +789,10 @@ body {
 /*--------------------- user-details ---------------*/
 .user-details {
   background: #FFF; }
+  .user-details .read-only {
+    color: #666; }
+  .user-details .editable {
+    color: #0277bd; }
 
 /*---------------Search result List -----------------*/
 .searchResultlist .resulttable {
@@ -790,7 +820,8 @@ body {
     height: 5rem; }
 
 .star-rating {
-  display: inline; }
+  display: inline;
+  color: #0D47A1; }
   .star-rating i {
     padding-left: 15px; }
 
@@ -799,7 +830,6 @@ body {
   font-size: 1.3rem; }
 
 .thumb {
-  background: #ff5722;
   margin-left: 16px !important;
   padding: 8px;
   border-radius: 50%;
