implemented teaser boxes

--- a/Server/public/views/searchRecipe.tpl.html
+++ b/Server/public/views/searchRecipe.tpl.html
@@ -107,7 +107,7 @@
     </div>
     <!--teasers-->
     <div class="row">
-        <div class="col s3">
+        <div class="col s4">
             <div class="card  orange lighten-3">
                 <div class="card-title">Neues Rezept</div>
                 <br/>
@@ -123,53 +123,7 @@
                 </div>
             </div>
         </div>
-        <div class="col s3">
-            <div class="card amber lighten-2">
-                <div class="card-title">Rezept der Woche</div>
-                <br/>
-
-                <div class="card-image">
-                    <img src="pictures/food1_400.jpg">
-                </div>
-                <div class="card-content">
-                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrötli</p>
-                </div>
-                <div class="card-action">
-                    <a class="btn" href="#/addRecipe">zum Rezept</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s3">
-            <div class="card  orange lighten-3">
-                <div class="card-title">Mega Fein</div>
-                <br/>
-
-                <div class="card-image">
-                    <img src="pictures/food2_400.jpg">
-                </div>
-                <div class="card-content">
-                    <p>Registrierte Benutzer können ihre eigene Rezepte erfassen</p>
-                </div>
-                <div class="card-action">
-                    <a class="btn" href="#/addRecipe">erfassen</a>
-                </div>
-            </div>
-        </div>
-        <div class="col s3">
-            <div class="card amber lighten-2">
-                <div class="card-title">Rezept der Woche</div>
-                <br/>
-
-                <div class="card-image">
-                    <img src="pictures/food1_400.jpg">
-                </div>
-                <div class="card-content">
-                    <p>Das beste Sandwitch des Kantons Züri - neu mit züribrütli</p>
-                </div>
-                <div class="card-action">
-                    <a class="btn" href="#/addRecipe">zum Rezept</a>
-                </div>
-            </div>
-        </div>
+        <fb-recipe-teaser type="0" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
+        <fb-recipe-teaser type="1" recipes="searchRecipeCtrl.recipes"></fb-recipe-teaser>
     </div>
 </div>
