--- a/Server/public/views/viewRecipe.tpl.html
+++ b/Server/public/views/viewRecipe.tpl.html
@@ -1,15 +1,22 @@
 <!--start view  single recipe-->
-<div class="viewrecipe" >
+<div class="viewrecipe">
     <div class="container">
         <!--big title-->
         <div class="row title-bg">
             <div class="col s12 l12">
                 <h3 class="">Rezepte <i class="small material-icons prefix">receipt</i></h3>
                 <span>lesen und Kochen</span>
+
                 <div class="right">
                     <div ng-controller="SessionController as sessionCtrl">
-                        <a class="btn btn-flat deep-orange white-text left" href="#/editRecipe/{{viewRecipeCtrl.recipe._id}}"
+                        <a class="btn btn-flat deep-orange white-text left"
+                           href="#/editRecipe/{{viewRecipeCtrl.recipe._id}}"
                            ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.userId)">Dieses Rezept bearbeiten</a>
+
+                        <button class="btn btn-flat orange white-text right" type="button"
+                                ng-show="sessionCtrl.isLoggedIn(viewRecipeCtrl.recipe.userId)"
+                                ng-click="viewRecipeCtrl.deleteRecipe()">Dieses Rezept löschen
+                        </button>
                     </div>
                 </div>
             </div>
@@ -21,6 +28,7 @@
             </div>
             <div class="col s6 l6 ">
                 <h5>Beschreibung</h5>
+
                 <p class="flow-text text-accent-1">{{viewRecipeCtrl.recipe.description}}</p>
             </div>
         </div>
@@ -50,10 +58,16 @@
                     </div>
                     <div class="card-content">
                         <p><strong>Rezept:</strong> {{viewRecipeCtrl.recipe.title}}<br/></p>
+
                         <p><strong>Author:</strong> {{viewRecipeCtrl.recipe.userName}}<br/></p>
+
                         <p><strong>Anzahl Personen:</strong> {{viewRecipeCtrl.recipe.numPerson}}<br/></p>
-                        <p><strong>Backzeit:</strong> {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/></p>
-                        <p><strong>Vorbereitungszeit:</strong> {{viewRecipeCtrl.recipe.preparationTime | minutesToHoursMinutes}}<br/></p>
+
+                        <p><strong>Backzeit:</strong> {{viewRecipeCtrl.recipe.bakingTime | minutesToHoursMinutes}}<br/>
+                        </p>
+
+                        <p><strong>Vorbereitungszeit:</strong> {{viewRecipeCtrl.recipe.preparationTime |
+                            minutesToHoursMinutes}}<br/></p>
                     </div>
                 </div>
                 <div class="card z-depth-2">
@@ -62,7 +76,8 @@
                     </div>
                     <div class="card-content">
                         <div ng-repeat="ingredient in viewRecipeCtrl.recipe.ingredients">
-                            <p><strong>{{ingredient.name}}:</strong>&nbsp; {{ingredient.denomination}}{{ingredient.unit}}<br/></p>
+                            <p><strong>{{ingredient.name}}:</strong>&nbsp;
+                                {{ingredient.denomination}}{{ingredient.unit}}<br/></p>
                         </div>
                     </div>
                 </div>
@@ -81,7 +96,8 @@
         </div>
         <div class="row">
             <div class="col s12">
-                <fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe" ratings="viewRecipeCtrl.ratings"></fb-list-recipe-ratings>
+                <fb-list-recipe-ratings recipe="viewRecipeCtrl.recipe"
+                                        ratings="viewRecipeCtrl.ratings"></fb-list-recipe-ratings>
             </div>
         </div>
     </div>
